updated dependencies to make this run again, still some warnings from re-frisk